[package]
authors = ["Ernestas Poskus <ernestas@vinted.com>"]
autobins = false
description = "Vinted Elasticsearch exporter\n"
documentation = "https://docs.rs/elasticsearch_exporter"
edition = "2021"
homepage = "https://github.com/vinted/elasticsearch-exporter-rs"
license = "MIT"
name = "elasticsearch_exporter"
repository = "https://github.com/vinted/elasticsearch-exporter-rs"
version = "0.31.0"
[[bin]]
name = "elasticsearch_exporter"

[dependencies]
byte-unit = "5.1.4"
fnv = "1.0.7"
humantime = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
oorandom = "11.1.3"
pretty_env_logger = "0.5.0"
serde = "1.0.196"
serde_derive = "1.0.147"
serde_json = "1.0.113"
serde_qs = "0.12.0"
url = "2.5.0"

[dependencies.chrono]
default-features = false
features = ["clock"]
version = "0.4.34"

[dependencies.clap]
default-features = false
features = ["suggestions", "color", "derive", "std", "cargo"]
version = "4.4.18"

[dependencies.elasticsearch]
default-features = false
features = ["native-tls"]
version = "8.5.0-alpha.1"

[dependencies.hyper]
default-features = false
features = ["runtime", "tcp", "server"]
version = "0.14.28"

[dependencies.prometheus]
default-features = false
features = ["process", "protobuf"]
version = "0.13.3"

[dependencies.tokio]
default-features = false
features = ["rt-multi-thread", "signal", "sync", "macros", "time"]
version = "1.26.0"

[profile]
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
