[package]
authors = ["Ernestas Poskus <ernestas@vinted.com>"]
autobins = false
description = "Proper Elasticsearch exporter\n"
documentation = "https://docs.rs/elasticsearch_exporter"
edition = "2021"
homepage = "https://github.com/vinted/elasticsearch-exporter-rs"
license = "MIT"
name = "elasticsearch_exporter"
repository = "https://github.com/vinted/elasticsearch-exporter-rs"
version = "0.33.0"
[[bin]]
name = "elasticsearch_exporter"

[dependencies]
byte-unit = "5.1.4"
fnv = "1.0.7"
humantime = "2.1.0"
lazy_static = "1.5.0"
log = "0.4.21"
oorandom = "11.1.3"
pretty_env_logger = "0.5.0"
serde = "1.0.203"
serde_derive = "1.0.147"
serde_json = "1.0.120"
serde_qs = "0.13.0"
url = "2.5.2"

[dependencies.chrono]
default-features = false
features = ["clock"]
version = "0.4.38"

[dependencies.clap]
default-features = false
features = ["suggestions", "color", "derive", "std", "cargo"]
version = "4.5.7"

[dependencies.elasticsearch]
default-features = false
features = ["native-tls"]
version = "8.5.0-alpha.1"

[dependencies.hyper]
default-features = false
features = ["runtime", "tcp", "server"]
version = "0.14.29"

[dependencies.prometheus]
default-features = false
features = ["process", "protobuf"]
version = "0.13.4"

[dependencies.tokio]
default-features = false
features = ["rt-multi-thread", "signal", "sync", "macros", "time"]
version = "1.26.0"

[profile]
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
