[package]
authors = ["Ernestas Poskus <ernestas@vinted.com>"]
autobins = false
description = "Proper Elasticsearch exporter\n"
documentation = "https://docs.rs/elasticsearch_exporter"
edition = "2021"
homepage = "https://github.com/vinted/elasticsearch-exporter-rs"
license = "MIT"
name = "elasticsearch_exporter"
repository = "https://github.com/vinted/elasticsearch-exporter-rs"
version = "0.35.0"
[[bin]]
name = "elasticsearch_exporter"

[dependencies]
byte-unit = "5.1.6"
fnv = "1.0.7"
humantime = "2.1.0"
lazy_static = "1.5.0"
log = "0.4.26"
oorandom = "11.1.5"
pretty_env_logger = "0.5.0"
serde = "1.0.219"
serde_derive = "1.0.147"
serde_json = "1.0.140"
serde_qs = "0.14.0"
url = "2.5.4"

[dependencies.chrono]
default-features = false
features = ["clock"]
version = "0.4.40"

[dependencies.clap]
default-features = false
features = ["suggestions", "color", "derive", "std", "cargo"]
version = "4.5.32"

[dependencies.elasticsearch]
default-features = false
features = ["native-tls"]
version = "8.17.0-alpha.1"

[dependencies.hyper]
default-features = false
features = ["runtime", "tcp", "server", "http1", "http2"]
version = "0.14.30"

[dependencies.prometheus]
default-features = false
features = ["process", "protobuf"]
version = "0.13.4"

[dependencies.tokio]
default-features = false
features = ["rt-multi-thread", "signal", "sync", "macros", "time"]
version = "1.44.1"

[profile]
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
